--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <h1>{{title}}</h1>
-<h2>4. Add services. Create the MessageService</h2>
 <app-heroes></app-heroes>
 <app-messages></app-messages>
+
+
+<!-- 
+Copyright Google LLC. All Rights Reserved.
+Use of this source code is governed by an MIT-style license that
+can be found in the LICENSE file at https://angular.io/license
+-->
